testdata/baselines/reference/submodule/conformance/conflictingCommonJSES2015Exports.errors.txt
bug24934.js(2,1): error TS2309: An export assignment cannot be used in a module with other exported elements.


==== bug24934.js (1 errors) ====
    export function abc(a, b, c) { return 5; }
    module.exports = { abc };
    ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2309: An export assignment cannot be used in a module with other exported elements.
==== use.js (0 errors) ====
    import { abc } from './bug24934';
    abc(1, 2, 3);
    